fixed formatting and deleted white space

--- a/frontend/src/components/SpotsList/Spots.css
+++ b/frontend/src/components/SpotsList/Spots.css
@@ -1,5 +1,5 @@
 img {
- height: 251.42px;
+ height: 306.844px;
  width: 377.52px;
  border-radius: 20px 20px 0 0;
 }
